--- a/style.css
+++ b/style.css
@@ -13,35 +13,98 @@ body {
     font-weight: 700;
     border-radius: 8px;
     background: #E55473;
-    padding: 20px 43px;
+    padding: .5rem 1rem;
     border: none;
+}
+
+.section-title {
+    color: #272727;
+    font-weight: 800;
 }
 
 p {
     color: rgba(39, 39, 39, 0.60);
-    font-size: 18px;
     font-weight: 400;
     line-height: 30px;
+    text-align: center;
 }
 
 /* Header Section */
 header {
     background-color: rgba(229, 84, 115, 0.10);
     display: flex;
-    gap: 100px;
-    align-items: center;
-    height: 850px;
+    gap: 5%;
+    height: 100%;
     width: auto;
-    padding: 0px 100px;
+    padding: 0 10%;
 }
 
-header h1 {
+.header-content {
+    margin: 10% 0;
+}
+
+.header-content>h1 {
     color: #272727;
     font-size: 60px;
     font-weight: 800;
 }
-
+.header-paragraph-style{
+    text-align: left;
+}
 img {
     height: auto;
     width: 50%;
+}
+
+/* Hot Deal Section */
+
+.hot-deal {
+    background: rgba(229, 84, 115, 0.05);
+    display: flex;
+    gap: 10%;
+    align-items: center;
+    height: 100%;
+    width: auto;
+    padding: 0 15%;
+}
+
+.hot-deal-content span {
+    color: #E55473;
+}
+.hot-deal-img{
+    height: auto;
+    width: 50%;
+}
+
+/* Instagram Section */
+
+.social-media{
+    margin: 5% 10%;
+}
+.instagram{
+    text-align: center;
+    margin-bottom: 5%;
+}
+.insta-pic{
+    display: flex;
+    justify-content: space-around;
+}
+.insta-pic>img{
+    height: auto;
+    width: 22%;
+}
+
+/* Newsletter */
+.newsletter{
+    background: url('Flower Asset/Rectangle 9.png') no-repeat;
+    text-align: center;
+    margin-top: 10%;
+    padding: 5%;
+}
+
+input{
+    inline-size: 40%;
+    height: 2em;
+    border: none;
+    border-radius: 0.3em;
 }
